--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Urvik Patel 
-logo: photo.png
+logo: photo.jpg
 description: 👋 Hi, I'm Urvik — a data analyst and AI enthusiast based in Melbourne. With hands-on experience across public health and sustainability sectors, I specialize in transforming complex data into clear, actionable insights. Proficient in Python, Power BI, and cloud platforms, I’m passionate about building ethical, impactful tech solutions. Currently pursuing my Master's in IT (AI) at the University of Melbourne.
 show_downloads: true
 theme: jekyll-theme-minimal
