--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Urvik Patel 
-logo: urvik.jpg
+logo: urvik1.jpg
 description: >
   👋 Hi, I'm Urvik — a Data Analyst and AI Engineer passionate about solving real-world problems with data. 
   With hands-on experience in government, healthcare, and environmental analytics, I specialize in creating impactful dashboards, automating pipelines, and deploying AI/ML solutions. 
